--- a/carbonlease_react/carbonlease/index.html
+++ b/carbonlease_react/carbonlease/index.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/assets/vendor/bootstrap-icons/bootstrap-icons.css" />
+    <link rel="stylesheet" href="./src/assets/vendor/aos/aos.css" />
+    <link rel="stylesheet" href="./src/assets/vendor/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./src/assets/vendor/glightbox/css/glightbox.min.css" />
+    <link rel="stylesheet" href="./src/assets/vendor/swiper/swiper-bundle.min.css" />
+
+    <script src="./src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="./src/assets/vendor/aos/aos.js"></script>
+    <script src="./src/assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="./src/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <script src="./src/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="./src/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+    
+    <script src="./src/assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="./src/assets/vendor/waypoints/noframework.waypoints.js"></script>
+
+    <script src="./src/assets/js/main.js"></script>
+
     <title>carbonlease</title>
   </head>
   <body>
