--- a/carbonlease_react/carbonlease/index.html
+++ b/carbonlease_react/carbonlease/index.html
@@ -37,8 +37,7 @@
     <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%VITE_KAKAO_MAP_API_KEY%&libraries=services"></script>
   
 
-
-
+    <script src="abc.js"></script>
     <title>carbonlease</title>
   </head>
   <body>
