--- a/carbonlease_react/carbonlease/index.html
+++ b/carbonlease_react/carbonlease/index.html
@@ -22,7 +22,7 @@
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <!-- Kakao Maps SDK  -->
     <!-- <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%VITE_KAKAO_MAP_API_KEY%&libraries=services"></script> -->
-    <script src="/config.js"></script>
+    <script type="module" src="/config.js"></script>
     <title>carbonlease</title>
   </head>
   <body>
